# liblarsen

./: .autotools  .cproject  .gitignore  .project  Makefile.am  README  autogen.sh  cleanup.sh  configure.ac  configure.in  larsen-example  liblarsen.pc.in  main.c
c_linalg/: c_linalg.h  c_linalg_cholesky.c  c_linalg_cholesky.h  c_matrix.c  c_matrix.h  c_matrixops.c
cl_linalg/: cl_linalg.c  cl_linalg.h  cl_matrix.c  cl_matrix.h  cl_matrix_ops.c
clapack_interface/: Makefile.am  cl_interface.h  cl_linalg.c  cl_linalg.h  cl_matrix.c  cl_matrix.h  cl_matrix_ops.c  cl_matrixops.c
clinalg/: Makefile.am  c_linalg.h  c_linalg_cholesky.c  c_linalg_cholesky.h  c_matrix.c  c_matrix.h  c_matrixops.c  clinalg.h  clinalg_cholesky.c
example/: Makefile.am  example.c  example.h  example_cdescent.c  example_elasticnet.c  example_estimator.c  example_l1regression.c  example_larsen.c  main.c
examples/: example_elasticnet.c  examples.c  examples.h
include/: Makefile.am  atomic.h  cdescent.h  larsen.h  larsen_linalg.h  larsen_private.h  linreg.h  linreg_private.h  linsys.h  linsys_private.h  mmio.h  mmreal.h  private.h  version.h
linalg/: Makefile.am  larsen_linalg.c  larsen_linalg.h  larsen_linalg_cholesky.c
src/: Makefile.am  activeset.c  atomic.c  bic.c  data.c  elasticnet.c  equiangular.c  estimator.c  larsen.c  linalg.c  linregmodel.c  mmio.c  mmreal.c  private.c  stepsize.c  update.c  utils.c
src/cdescent/: cdescent.c  utils.c
src/larsen/: Makefile.am  activeset.c  equiangular.c  estimator.c  utils.c
src/linalg/: Makefile.am  larsen_linalg.c  larsen_linalg_cholesky.c
src/linreg/: linreg.c
src/linsys/: Makefile.am  linsys.c
test/: Makefile.am  test_cholesky.c  test_cholesky_decomp.c  test_cholesky_delete.c  test_cholesky_insert.c  test_cholesky_svx.c  test_larsen.h
