## Process this file with automake to produce Makefile.in

INCLUDES =\
	 -I./ -I../include

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LTLIBRARIES = libclinalg.la

libclinalg_include_DATA = \
	clinalg.h

EXTRA_DIST = $(liblarsen_include_DATA)

libclinalg_includedir = $(pkgincludedir)

libclinalg_la_SOURCES = \
	clinalg_cholesky.c

libclinalg_la_LDFLAGS = 

libclinalg_la_LIBADD = 

