## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

liblarsen_includedir = $(pkgincludedir)

liblarsen_include_DATA = \
	larsen.h\
	version.h

EXTRA_DIST = $(liblarsen_include_DATA)
