## Process this file with automake to produce Makefile.in

INCLUDES =\
	 -I./ -I../include

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LTLIBRARIES = liblarsenlinalg.la

liblarsenlinalg_include_DATA = \
	larsen_linalg.h

EXTRA_DIST = $(liblarsen_include_DATA)

liblarsenlinalg_includedir = $(pkgincludedir)

liblarsenlinalg_la_SOURCES = \
	larsen_linalg_cholesky.c

liblarsenlinalg_la_LDFLAGS = 

liblarsenlinalg_la_LIBADD = 

