## Process this file with automake to produce Makefile.in

INCLUDES = -I$(top_srcdir)/include

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LTLIBRARIES = liblarsenlinalg.la

liblarsenlinalg_includedir = $(pkgincludedir)

liblarsenlinalg_la_SOURCES = \
	larsen_linalg.c\
	larsen_linalg_cholesky.c

liblarsenlinalg_la_LDFLAGS = 

liblarsenlinalg_la_LIBADD = 

